kubernetes/samples/aws-cloud-controller-manager.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: aws-cloud-controller-manager
  namespace: kube-system
  labels:
    k8s-app: aws-cloud-controller-manager
spec:
  selector:
    matchLabels:
      k8s-app: aws-cloud-controller-manager
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        k8s-app: aws-cloud-controller-manager
    spec:
      nodeSelector:
        node-role.kubernetes.io/control-plane: ""
      tolerations:
        - key: node.cloudprovider.kubernetes.io/uninitialized
          value: "true"
          effect: NoSchedule
        - key: node-role.kubernetes.io/control-plane
          effect: NoSchedule
      serviceAccountName: cloud-controller-manager
      containers:
        - name: aws-cloud-controller-manager
          image: registry.k8s.io/provider-aws/cloud-controller-manager:v1.27.1
          args:
            - --v=2
            - --cloud-provider=aws
            # Use the superset-role overlay if you don't want a token per controller
            - --use-service-account-credentials=true
            # Set --configure-cloud-routes=true if required by your CNI
            - --configure-cloud-routes=false
            - --feature-gates=CloudDualStackNodeIPs=true
            - --cloud-config=/etc/kubernetes/cloud-config.conf
          volumeMounts:
            - name: cloud-config
              mountPath: /etc/kubernetes/cloud-config.conf
              subPath: cloud-config.conf
          resources:
            requests:
              cpu: 200m
      hostNetwork: true
      volumes:
        - name: cloud-config
          configMap:
            name: cloud-config
