kubernetes/samples/kube-proxy.tmpl.yaml
# https://github.com/kubernetes/kubernetes/blob/v1.33.3/cluster/addons/kube-proxy/kube-proxy-ds.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    k8s-app: kube-proxy
    addonmanager.kubernetes.io/mode: Reconcile
  name: kube-proxy
  namespace: kube-system
spec:
  selector:
    matchLabels:
      k8s-app: kube-proxy
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 10%
  template:
    metadata:
      labels:
        k8s-app: kube-proxy
    spec:
      priorityClassName: system-node-critical
      hostNetwork: true
      nodeSelector:
        kubernetes.io/os: linux
      tolerations:
        - operator: "Exists"
          effect: "NoExecute"
        - operator: "Exists"
          effect: "NoSchedule"
      containers:
        - name: kube-proxy
          image: registry.k8s.io/kube-proxy:${KUBE_VER}
          command:
            - /bin/sh
            - -c
            - kube-proxy --config=/var/lib/kube-proxy/config.yaml
          securityContext:
            privileged: true
          volumeMounts:
            - mountPath: /var/log
              name: varlog
              readOnly: false
            - mountPath: /run/xtables.lock
              name: xtables-lock
              readOnly: false
            - mountPath: /lib/modules
              name: lib-modules
              readOnly: true
            - mountPath: /var/lib/kube-proxy
              name: config
            - mountPath: /etc/kubernetes/kube-proxy.conf
              name: kubeconfig
              readOnly: true
      volumes:
        - name: varlog
          hostPath:
            path: /var/log
        - name: xtables-lock
          hostPath:
            path: /run/xtables.lock
            type: FileOrCreate
        - name: lib-modules
          hostPath:
            path: /lib/modules
        - name: config
          configMap:
            name: kube-proxy
        - name: kubeconfig
          hostPath:
            path: /etc/kubernetes/kube-proxy.conf
            type: FileOrCreate
      serviceAccountName: kube-proxy
