kubernetes/samples/metrics-server.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: metrics-server
  name: metrics-server
  namespace: kube-system
spec:
  ports:
  - appProtocol: https
    name: https
    port: 443
    protocol: TCP
    targetPort: https
  selector:
    k8s-app: metrics-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: metrics-server
  name: metrics-server
  namespace: kube-system
spec:
  selector:
    matchLabels:
      k8s-app: metrics-server
  strategy:
    rollingUpdate:
      maxUnavailable: 0
  template:
    metadata:
      labels:
        k8s-app: metrics-server
    spec:
      containers:
      - args:
        - --secure-port=10250
        - --kubelet-preferred-address-types=InternalIP,ExternalIP,Hostname
        - --kubelet-use-node-status-port
        - --metric-resolution=15s
        - --client-ca-file=/etc/kubernetes/pki/ca.crt
        - --requestheader-client-ca-file=/etc/kubernetes/pki/front-proxy-ca.crt
        - --tls-cert-file=/etc/kubernetes/pki/front-proxy-client-metrics-server.crt
        - --tls-private-key-file=/etc/kubernetes/pki/front-proxy-client-metrics-server.key
        - --kubelet-certificate-authority=/etc/kubernetes/pki/ca.crt
        - --requestheader-allowed-names=""
        image: registry.k8s.io/metrics-server/metrics-server:v0.8.1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /livez
            port: https
            scheme: HTTPS
          periodSeconds: 10
        name: metrics-server
        ports:
        - containerPort: 10250
          name: https
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /readyz
            port: https
            scheme: HTTPS
          initialDelaySeconds: 20
          periodSeconds: 10
        resources:
          requests:
            cpu: 100m
            memory: 200Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1000
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - mountPath: /tmp
          name: tmp-dir
        - mountPath: /var/lib/kubelet/pki/kubelet.crt
          name: kubelet-crt
          readOnly: true
        - mountPath: /etc/kubernetes/pki/ca.crt
          name: cluster-crt
          readOnly: true
        - mountPath: /etc/kubernetes/pki/front-proxy-ca.crt
          name: front-proxy-ca-crt
          readOnly: true
        - mountPath: /etc/kubernetes/pki/front-proxy-client-metrics-server.crt
          name: front-proxy-client-metrics-server-crt
          readOnly: true
        - mountPath: /etc/kubernetes/pki/front-proxy-client-metrics-server.key
          name: front-proxy-client-metrics-server-key
          readOnly: true
      nodeSelector:
        kubernetes.io/os: linux
      priorityClassName: system-cluster-critical
      serviceAccountName: metrics-server
      volumes:
      - emptyDir: {}
        name: tmp-dir
      - hostPath:
          path: /var/lib/kubelet/pki/kubelet.crt
          type: File
        name: kubelet-crt
      - hostPath:
          path: /etc/kubernetes/pki/ca.crt
          type: File
        name: cluster-crt
      - hostPath:
          path: /etc/kubernetes/pki/front-proxy-ca.crt
          type: File
        name: front-proxy-ca-crt
      - hostPath:
          path: /etc/kubernetes/pki/front-proxy-client-metrics-server.crt
          type: File
        name: front-proxy-client-metrics-server-crt
      - hostPath:
          path: /etc/kubernetes/pki/front-proxy-client-metrics-server.key
          type: File
        name: front-proxy-client-metrics-server-key
